<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newStudentActivity">

    <TextView
        android:id="@+id/newStudentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addNewStudent"
        android:textAllCaps="false"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newStudentTitle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:text="@string/titleFirstName"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/firstNameNew"
                android:layout_width="240dp"
                android:layout_height="72dp"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:ems="10"
                android:hint="@string/titleFirstName"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textSize="36sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/titleFamilyName"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/familyNameNew"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:hint="@string/titleFamilyName"
                android:inputType="textPersonName"
                android:textAllCaps="false"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:text="@string/titleID"
                android:textAllCaps="false"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/studentIDNew"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:hint="@string/titleID"
                android:inputType="number"
                android:textAllCaps="false"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/choosePhotoFromGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chooseAPhotoInGallery" />

            <Button
                android:id="@+id/takeAPhotoByCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/takeAPhotoByCamera" />
        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/confirmAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toTopOf="@+id/cancelAdd"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancelAdd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="104dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>